modified css for universal fonts, and different font for note taking

--- a/css/stylesheets.css
+++ b/css/stylesheets.css
@@ -1,2 +1,7 @@
-font-family: 'Roboto Mono', monospace;
-font-family: 'Open Sans', sans-serif;
+*{
+    font-family: 'Open Sans', sans-serif;
+}
+main
+#text_area{
+    font-family: 'Roboto Mono', monospace;
+}
