--- a/css/stylesheets.css
+++ b/css/stylesheets.css
@@ -1,7 +1,6 @@
 *{
     font-family: 'Open Sans', sans-serif;
 }
-
 #text_area{
     font-family: 'Roboto Mono', monospace;
 }
@@ -19,7 +18,8 @@ header{
 header ul{
     list-style-type: none;
     display: flex;
-    justify-content: center;
+    justify-content: right;
+    margin: 0px;
     padding: 0px;
 }
 header ul li{
@@ -39,13 +39,17 @@ main{
 .top_buttons{
     display: flex;
     justify-content: space-between;
-    padding: 1em 1em ;
+    padding: 0em 0.5em 1em;
 }
 .bottom_buttons{
     display: flex;
     justify-content: right;
-    padding: 1em 1em;
+    padding: 1em 0em 1em 1em;
 }
+#save{
+    margin-right: 1%;
+}
+
 footer{
     order: 4;
     text-align: center;
