Attempted media query, need to fix aside formatting, made placeholder text for the text area

--- a/css/stylesheets.css
+++ b/css/stylesheets.css
@@ -55,14 +55,34 @@ footer{
     text-align: center;
 }
 @media screen and (min-width:600px) {
-    body{
-        display: grid;
-        grid-template-columns: 1fr 4fr;
-        grid-auto-rows: max-content;
-    }
+    /* body{
+ 
+    } */
     aside{
-        order:1 ;
-        grid-column: 1/2;
-        grid-row: 1/-1;
+        order:0;
+        flex-direction: row;
+        flex: 0;
+        width: 20%;
+        background-color: blue;
+        align-items:flex-end;
+    }
+    header{
+        order:1;
+        flex-direction: column;
+        width: 80%;
+        flex: 1;
+        
+    }
+    main{
+        order:2;
+        flex-direction: column;
+        width: 80%;
+        flex: 1;
+    }
+    footer{
+        order:3;
+        flex-direction: column;
+        width: 80%;
+        flex: 1;
     }
 }
