--- a/css/stylesheets.css
+++ b/css/stylesheets.css
@@ -1,5 +1,6 @@
 *{
     font-family: 'Open Sans', sans-serif;
+    color:#4b7171 ;
 }
 #text_area{
     font-family: 'Roboto Mono', monospace;
@@ -8,8 +9,10 @@
 body {
     display: flex;
     flex-direction: column;
+    margin-top: 1px;
+
 }
-h1{
+h1,footer{
     text-align: center;
 }
 header ul{
@@ -32,7 +35,7 @@ main{
 .top_buttons{
     display: flex;
     justify-content: space-between;
-    padding: 0em 0.5em 1em;
+    padding: 1em 0.5em 1em;
 }
 .bottom_buttons{
     display: flex;
@@ -41,10 +44,6 @@ main{
 }
 #save{
     margin-right: 1%;
-}
-
-footer{
-    text-align: center;
 }
 @media screen and (min-width:600px) {
     body{
@@ -57,12 +56,15 @@ footer{
         grid-column: 1/2;
         height: 100%;
         z-index: 1;
-        height: 100%;
         width: 20%;
+        margin-top: 10px;
         position: fixed;
-        z-index: 0;
         top: 0;
         left: 0;
+    }
+    aside h2{
+        text-align: center;
+        margin-bottom: 0em;
     }
     header{
         order:1;
