Modified background color for dark_theme and Cancel button

--- a/css/stylesheets.css
+++ b/css/stylesheets.css
@@ -26,10 +26,10 @@ button{
     background-color: #395656;
 }
 #dark_theme{
-    background-color: #6f6a87;
+    background-color: #514F64;
 }
 #cancel{
-    background-color: #d9827c;
+    background-color: #92302A;
         margin-left: 1em;
 }
 header ul{
