modfied colors and background colors for aside background, aside font, and cancel button

--- a/css/stylesheets.css
+++ b/css/stylesheets.css
@@ -46,7 +46,8 @@ aside li{
     list-style-type: square;
 }
 aside{
-    color: #4b7171 ;
+    color: #4b7171;
+    background-color: #FFF3A3;
 }
 main{
     display: grid;
