--- a/css/stylesheets.css
+++ b/css/stylesheets.css
@@ -8,6 +8,8 @@ body {
     margin: 0;
     background-color: #f9f3ec;
     height: 100vh;
+    font-size: 75%;
+
 
 /*---------Header---------*/
 }
@@ -59,7 +61,7 @@ main{
 button{
     color: #f9f3ec;
     border: 0;
-    padding: 0.5em;
+    padding: 1em;
     border-radius: 1em;
 }
 #new_note, #save{
@@ -72,16 +74,16 @@ button{
 #text_area{
     font-family: 'Roboto Mono', monospace;
     margin: 0rem 0.5rem 0rem;
-    height:15rem;
+    border: 4px solid #77a7eb;
 }
 .bottom_buttons{
     display: flex;
     justify-content: right;
-    padding: 1em 0em 1em 1em;
-    margin: 0rem 0.5rem 0rem 0rem;
+    /* padding: 1em 0em 1em 1em; */
+    margin: 1em;
 }
 #save{
-    margin-right: 1%;
+    margin-right: 0.5rem;
 }
 #cancel{
     background-color: #92302A;
@@ -106,6 +108,7 @@ footer{
         grid-template-rows: max-content auto max-content;
         grid-template-columns: 1fr 4fr; 
         height: 100vh;
+        font-size: 100%;
     }
     aside{
         order:0;
