--- a/css/stylesheets.css
+++ b/css/stylesheets.css
@@ -51,17 +51,18 @@ aside h2{
 /*---------Main---------*/
 main{
     display: grid;
+    grid-template-rows: max-content auto max-content;
 }
 .top_buttons{
     display: flex;
     justify-content: space-between;
     margin: 1em;
-    /* padding: 1em 1em 1em; */
+    padding: 1em 1em 1em;
 }
 button{
     color: #f9f3ec;
     border: 0;
-    padding: 1em;
+    padding: 1em 1em 1em;
     border-radius: 1em;
 }
 #new_note, #save{
@@ -75,11 +76,12 @@ button{
     font-family: 'Roboto Mono', monospace;
     margin: 0rem 0.5rem 0rem;
     border: 4px solid #77a7eb;
+    height: auto;
 }
 .bottom_buttons{
     display: flex;
     justify-content: right;
-    /* padding: 1em 0em 1em 1em; */
+    padding: 1em 0em 1em 1em;
     margin: 1em;
 }
 #save{
@@ -136,10 +138,9 @@ footer{
         display: flex;
         justify-content: right;
         padding: 0em 0em 0em 0em;
-        margin: 0rem 0.5rem 0rem 0rem;
+        margin: 1rem 0.5rem 0rem 0rem;
     }
     button{
-        padding: 0.5rem;
         border-radius: 1em;
     }
     main{
@@ -152,7 +153,6 @@ footer{
         grid-row: 3;
         grid-column: 2/-1;
     }
-    #new_note{
-        padding: 1rem;
-    }
+    /* #new_note{
+        padding: 1rem; */
 }
