--- a/css/stylesheets.css
+++ b/css/stylesheets.css
@@ -3,12 +3,14 @@
     color:#395656 ;
 }
 body {
-    display: flex;
-    flex-direction: column;
+    display: grid;
+    /* flex-direction: column; */
+    grid-template-rows: max-content max-content max-content;
     margin: 0;
     background-color: #f9f3ec;
     height: 100vh;
     font-size: 75%;
+    
 
 
 /*---------Header---------*/
@@ -76,7 +78,7 @@ button{
     font-family: 'Roboto Mono', monospace;
     margin: 0rem 0.5rem 0rem;
     border: 4px solid #77a7eb;
-    height: auto;
+    height: 12em;
 }
 .bottom_buttons{
     display: flex;
@@ -96,12 +98,14 @@ footer{
     display: flex;
     flex-direction: column;
     justify-content: center;
+    margin-top: auto;
 }
 .footer_logo{
     display: flex;
     flex-direction: row;
     justify-content: center;
     margin-top: auto;
+
 }
 
 @media screen and (min-width:600px) {
