--- a/css/stylesheets.css
+++ b/css/stylesheets.css
@@ -53,7 +53,7 @@ aside h2{
 /*---------Main---------*/
 main{
     display: grid;
-    grid-template-rows: max-content auto max-content;
+    grid-template-rows: max-content max-content max-content;
 }
 .top_buttons{
     display: flex;
@@ -79,6 +79,7 @@ button{
     margin: 0rem 0.5rem 0rem;
     border: 4px solid #77a7eb;
     height: 12em;
+
 }
 .bottom_buttons{
     display: flex;
