--- a/css/stylesheets.css
+++ b/css/stylesheets.css
@@ -120,6 +120,7 @@ footer{
     aside{
         order:0;
         grid-column: 1/2;
+        grid-row: 1/-3;
         height: 100%;
         
         z-index: 1;
@@ -132,6 +133,9 @@ footer{
         text-align: center;
         margin-bottom: 0em;
         margin-left: .04rem;
+    }
+    aside ul{
+        flex-direction: columng;
     }
     header{
         order:1;
@@ -158,6 +162,4 @@ footer{
         grid-row: 3;
         grid-column: 2/-1;
     }
-    /* #new_note{
-        padding: 1rem; */
 }
