modified background color for dark theme button to be the same as sample

--- a/css/stylesheets.css
+++ b/css/stylesheets.css
@@ -69,7 +69,7 @@ button{
     background-color: #395656;
 }
 #dark_theme{
-    background-color: #514F64;
+    background-color: #6f6a87;
 }
 
 #text_area{
