--- a/css/stylesheets.css
+++ b/css/stylesheets.css
@@ -116,15 +116,14 @@ footer{
     }
     aside{
         order:0;
-        grid-column: 1/2;
-        grid-row: 1/-3;
-        height: 100vh;
-        
-        z-index: 1;
+        grid-column: 1/-1;
+        grid-row: 1/span-1;
+        /* height: 100vh; */
+        /* z-index: 1; */
         width: 20vw;
-        position: fixed;
-        top: 0;
-        left: 0;
+        /* position: fixed; */
+        /* top: 0; */
+        /* left: 0; */
     }
     aside h2{
         text-align: center;
