--- a/css/stylesheets.css
+++ b/css/stylesheets.css
@@ -25,7 +25,7 @@ header nav ul{
     padding: 0rem;
 }
 header ul li{
-    /* flex-direction: row; */
+    flex-direction: row;
     align-items: center;
     padding: 5px;
     margin: 0rem 0.5rem 0rem 0rem;
