removed id and switched to class to not have cascading issues when query selecting

--- a/css/stylesheets.css
+++ b/css/stylesheets.css
@@ -10,10 +10,10 @@ body {
     height: 100vh;
     font-size: 75%;
     
-
+}
 
 /*---------Header---------*/
-}
+
 h1,footer{
     text-align: center;
 }
@@ -65,14 +65,14 @@ button{
     padding: 1em 1em 1em;
     border-radius: 1em;
 }
-#new_note_button, #save_button{
+.new_note_button, .save_button{
     background-color: #395656;
 }
-#dark_theme_button{
+.dark_theme_button{
     background-color: #514f64;
 }
 
-#text_area{
+.text_area{
     font-family: 'Open Sans', sans-serif;
     margin: 0rem 0.5rem 0rem;
     border: 4px solid #77a7eb;
@@ -84,10 +84,10 @@ button{
     justify-content: right;
     margin: 1em;
 }
-#save_button{
+.save_button{
     margin-right: 0.5rem;
 }
-#cancel_button{
+.cancel_button{
     background-color: #92302A;
     margin: 0rem 0.5rem 0rem 0rem;
 }
@@ -147,4 +147,11 @@ footer{
         grid-row: 4;
         grid-column: 2/-1;
     }
+}
+
+.gray_color{
+    background-color: gray;
+}
+.white_font{
+    color: white;
 }
