--- a/css/stylesheets.css
+++ b/css/stylesheets.css
@@ -147,13 +147,16 @@ footer{
     }
 }
 
-.gray_bg_color{
-    background-color: gray;
-    color:white;
+.dark_mode_aside{
+    background-color: rgb(81, 79, 79);
+    color: rgb(190, 180, 180)
 }
-.black_bg_color{
+.dark_mode_body{
     background-color: black;
+    color: rgb(190, 180, 180);
 }
-.white_font_color{
-    color: white;
+.dark_mode_text_area{
+    background-color: rgb(81, 79, 79);
+    border-color: rgb(4, 4, 99);
+    color: rgb(190, 180, 180);
 }
