modified save button to prompt user for title, and save the text in body to an array

--- a/css/stylesheets.css
+++ b/css/stylesheets.css
@@ -1,3 +1,4 @@
+/*---------Body--------*/
 body {
     font-family: 'Roboto Mono', monospace;
     color:#395656 ;
@@ -146,6 +147,7 @@ footer{
         grid-column: 2/-1;
     }
 }
+/*---------Javascript--------*/
 
 .dark_mode_aside{
     background-color: rgb(81, 79, 79);
