--- a/css/stylesheets.css
+++ b/css/stylesheets.css
@@ -1,8 +1,7 @@
-*{
+/*---------Body--------*/
+body {
     font-family: 'Roboto Mono', monospace;
     color:#395656 ;
-}
-body {
     display: grid;
     grid-template-rows: max-content max-content max-content;
     margin: 0;
@@ -10,10 +9,10 @@ body {
     height: 100vh;
     font-size: 75%;
     
-
+}
 
 /*---------Header---------*/
-}
+
 h1,footer{
     text-align: center;
 }
@@ -40,8 +39,13 @@ aside{
 aside ul{
     list-style-type: square;
     display: flex;
-    flex-direction: row;
+    flex-direction: column;
     justify-content: space-around;
+    
+}
+aside ul li:hover{
+    cursor:pointer;
+    color:rgb(4, 4, 99);    
 }
 aside h2{
     margin-left: 0.5rem;
@@ -63,14 +67,14 @@ button{
     padding: 1em 1em 1em;
     border-radius: 1em;
 }
-#new_note, #save{
+.new_note_button, .save_button{
     background-color: #395656;
 }
-#dark_theme{
+.dark_theme_button{
     background-color: #514f64;
 }
 
-#text_area{
+.text_area{
     font-family: 'Open Sans', sans-serif;
     margin: 0rem 0.5rem 0rem;
     border: 4px solid #77a7eb;
@@ -82,10 +86,10 @@ button{
     justify-content: right;
     margin: 1em;
 }
-#save{
+.save_button{
     margin-right: 0.5rem;
 }
-#cancel{
+.cancel_button{
     background-color: #92302A;
     margin: 0rem 0.5rem 0rem 0rem;
 }
@@ -98,15 +102,13 @@ footer{
 }
 .footer_logo{
     display: flex;
-    flex-direction: row;
     justify-content: center;
     margin-top: auto;
 
 }
-
+/*---------Media Query---------*/
 @media screen and (min-width:600px) {
     body{
-        display: grid;
         grid-template-rows: max-content auto max-content;
         grid-template-columns: 1fr 4fr; 
         height: 100vh;
@@ -114,15 +116,9 @@ footer{
     }
     aside{
         order:0;
-        grid-column: 1/2;
-        grid-row: 1/-3;
-        height: 100vh;
-        
-        z-index: 1;
+        grid-column: 1/-1;
+        grid-row: 1/span-1;
         width: 20vw;
-        position: fixed;
-        top: 0;
-        left: 0;
     }
     aside h2{
         text-align: center;
@@ -149,7 +145,7 @@ footer{
     }
     footer{
         order:3;        
-        grid-row: 3;
+        grid-row: 4;
         grid-column: 2/-1;
     }
 }
